# omlx

./: .gitignore  AGENTS.md  README.fr.md  README.ja.md  README.ko.md  README.md  README.zh.md  pyproject.toml  transcript.txt
.claude/: settings.local.json
.github/workflows/: update-formula.yml
Formula/: omlx.rb
apps/omlx-mac/Resources/: Localizable.xcstrings
apps/omlx-mac/Sources/App/: AppDelegate.swift
apps/omlx-mac/Sources/AppView/: AppServices.swift
apps/omlx-mac/Sources/AppView/Screens/: IntegrationsScreen.swift  ModelSettingsScreen.swift  ModelsScreen.swift  ProfileViews.swift  ProfileWorkingState.swift
apps/omlx-mac/Sources/Config/: AppConfig.swift  ShellEnvWriter.swift
apps/omlx-mac/Sources/Net/DTO/: ModelsDTO.swift
apps/omlx-mac/Sources/Theme/Components/: CodeChip.swift
apps/omlx-mac/Tests/oMLXTests/: ShellEnvWriterTests.swift
docs/: audio-engine-fixes.md  enforcer-eviction-review.md  more-models-v0312-merge-plan.md  more-models-v039-rebase-plan.md  nvfp4-review.md  pinned-model-pre-request-eviction.md
docs/experimental/: dflash_mlx_integration.md
omlx/: __main__.py  _version.py  cli.py  config.py  debug_capture.py  discovery.py  engine_core.py  engine_pool.py  exceptions.py  logging_config.py  memory_monitor.py  model_discovery.py  model_profiles.py  model_registry.py  model_settings.py  mx_buffer_lock.py  oq.py  output_collector.py  prefill_progress.py  prefill_transient_tracker.py  process_memory_enforcer.py  request.py  scheduler.py  server.py  server_metrics.py  settings.py  transcode_nvfp4.py  turboquant_kv.py
omlx/adapter/: gemma4.py  harmony.py  output_parser.py
omlx/admin/: accuracy_benchmark.py  auth.py  benchmark.py  hf_downloader.py  hf_uploader.py  ms_downloader.py  oq_manager.py  routes.py  vendor_deps.py
omlx/admin/i18n/: en.json  es.json  fr.json  ja.json  ko.json  ru.json  zh-TW.json  zh.json
omlx/admin/static/css/: dashboard.css  tailwind.css
omlx/admin/static/js/: dashboard.js
omlx/admin/templates/: base.html  chat.html
omlx/admin/templates/dashboard/: _bench.html  _bench_accuracy.html  _logs.html  _modal_model_settings.html  _models.html  _navbar.html  _settings.html  _status.html
omlx/api/: anthropic_models.py  anthropic_utils.py  audio_models.py  audio_routes.py  embedding_models.py  grammar.py  mcp_routes.py  openai_models.py  rerank_models.py  responses_models.py  responses_utils.py  shared_models.py  thinking.py  tool_calling.py  utils.py
omlx/api/adapters/: anthropic.py  base.py  openai.py
omlx/cache/: boundary_snapshot_store.py  hybrid_cache.py  interface.py  observability.py  paged_cache.py  paged_ssd_cache.py  prefix_cache.py  recovery.py  stats.py  tiered_manager.py  type_handlers.py  type_registry.py  vision_feature_cache.py
omlx/engine/: __init__.py  asr.py  audio_utils.py  base.py  batched.py  dflash.py  embedding.py  llm_reranker.py  reranker.py  sts.py  stt.py  tts.py  vlm.py
omlx/eval/: arc.py  base.py  cmmlu.py  hellaswag.py  humaneval.py  jmmlu.py  kmmlu.py  livecodebench.py  mbpp.py  mmlu.py  mmlu_pro.py  truthfulqa.py  winogrande.py
omlx/integrations/: __init__.py  base.py  claude.py  codex.py  copilot.py  hermes.py  openclaw.py  opencode.py  pi.py
omlx/mcp/: client.py  types.py
omlx/models/: embedding.py  llm.py  mlx_embeddings_compat.py  reranker.py  vlm.py
omlx/patches/: dflash_lifecycle.py  gated_delta_advance.py  global_scale_runtime.py  index_cache.py  qwen3_5_attention.py  qwen3_6_nested_visual.py  specprefill.py
omlx/patches/deepseek_v4/: README.md  __init__.py  cache_extras.py  cache_handlers.py  chat_template_v4.py  deepseek_v4_model.py  generate_patch.py  hyper_connection.py  tokenizer_patch.py  tool_parser_v4.py  utils_patch.py
omlx/patches/mlx_lm_mtp/: __init__.py  batch_generator.py  cache_rollback.py  deepseek_v4_model.py  qwen35_model.py
omlx/patches/mlx_vlm_mtp/: __init__.py  qwen35_moe_vlm_model.py  qwen35_moe_vlm_runtime.py  qwen35_vlm_model.py  qwen35_vlm_runtime.py
omlx/speculative/: __init__.py  vlm_mtp.py
omlx/utils/: hardware.py  image.py  install.py  model_loading.py  proc_memory.py  release_check.py  sampling.py  tokenizer.py
packaging/: build.py  venvstacks.toml
packaging/omlx_app/: app.py  config.py  preferences.py  server_manager.py  updater.py  welcome.py
scripts/: _tui_failure_plugin.py  ab_bench.py  generate_tts_count_1_to_30.py  run_tests_tui.py
tests/: conftest.py  e2e_vision_cache.py  test_abort_drain.py  test_accuracy_benchmark.py  test_active_models_visibility.py  test_admin_api_key.py  test_admin_auth.py  test_admin_reload.py  test_admin_restart.py  test_admin_update_check.py  test_anthropic_adapter.py  test_anthropic_models.py  test_api_auth.py  test_api_utils.py  test_audio_api.py  test_audio_capability_gating.py  test_audio_discovery.py  test_audio_engines.py  test_audio_memory.py  test_audio_sts.py  test_audio_stt.py  test_audio_tts.py  test_batched_engine.py  test_benchmark.py  test_boundary_snapshot_store.py  test_cache_factory.py  test_cache_ntuple_state.py  test_cache_observability.py  test_cache_stats.py  test_cache_type_handlers.py  test_cli.py  test_cli_crash_diagnostics.py  test_context_scaling.py  test_deepseek_v4_patch.py  test_dflash_engine.py  test_dflash_lifecycle.py  test_dflash_multimodal_fallback.py  test_discovery.py  test_embedding.py  test_engine_abort_protocol.py  (+93 more)
tests/fixtures/: generate_test_audio.py
tests/integration/: instr_eviction_harness.py  test_asr_long_audio.py  test_audio_reranker_e2e.py  test_audio_reranker_endpoints.py  test_audio_tts_streaming_integration.py  test_boundary_cache_consistency.py  test_e2e_streaming.py  test_exclusive_live_server.py  test_exclusive_pinned_e2e.py  test_full_integration.py  test_phase0_e2e.py  test_phase0_endpoints.py  test_real_model_inference.py  test_server_e2e.py  test_server_endpoints.py  test_tts_eviction_garble.py  test_tts_executor_garble_regression.py  test_vlm_mrope_integration.py
